# bebion

./: Cargo.toml  LICENSE  Makefile  index.html
.github/workflows/: bebion.yml
crates/bebion-cli/: Cargo.toml
crates/bebion-cli/src/: lib.rs  repl.rs  runner.rs
crates/bebion-compiler/: Cargo.toml
crates/bebion-compiler/src/: bytecode.rs  compiler.rs  lib.rs
crates/bebion-core/: Cargo.toml
crates/bebion-core/src/: lib.rs
crates/bebion-ffi/: Cargo.toml
crates/bebion-ffi/src/: lib.rs  native.rs  wasi.rs
crates/bebion-gc/: Cargo.toml
crates/bebion-gc/src/: lib.rs
crates/bebion-parser/: Cargo.toml
crates/bebion-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/bebion-runtime/: Cargo.toml
crates/bebion-runtime/src/: event_loop.rs  lib.rs  runtime.rs  value.rs  vm.rs
crates/bebion-std/: Cargo.toml
crates/bebion-std/src/: console.rs  crypto.rs  fs.rs  http.rs  lib.rs  net.rs  process.rs  timers.rs  url.rs  util.rs
js/modules/: fs.js  http.js
js/runtime/: bebion.js
src/: App.tsx  main.rs
