[package]
name = "bebion"
version = "0.1.0"
edition = "2021"
authors = ["Bebion Team"]
description = "A high-performance JavaScript runtime built with Rust"
license = "MIT"
repository = "https://github.com/bebion/bebion"

[workspace]
members = [
    "crates/bebion-core",
    "crates/bebion-parser",
    "crates/bebion-compiler",
    "crates/bebion-gc",
    "crates/bebion-runtime",
    "crates/bebion-std",
    "crates/bebion-ffi",
    "crates/bebion-cli"
]

[dependencies]
bebion-core = { path = "crates/bebion-core" }
bebion-parser = { path = "crates/bebion-parser" }
bebion-compiler = { path = "crates/bebion-compiler" }
bebion-gc = { path = "crates/bebion-gc" }
bebion-runtime = { path = "crates/bebion-runtime" }
bebion-std = { path = "crates/bebion-std" }
bebion-ffi = { path = "crates/bebion-ffi" }
bebion-cli = { path = "crates/bebion-cli" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "bebion"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true