[package]
name = "bebion-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bebion-core = { path = "../bebion-core" }
bebion-std = { path = "../bebion-std" }
bebion-ffi = { path = "../bebion-ffi" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rustyline = "12.0"
colored = "2.0"
serde_json = "1.0"
tracing = "0.1"