[package]
name = "bebion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bebion-parser = { path = "../bebion-parser" }
bebion-compiler = { path = "../bebion-compiler" }
bebion-gc = { path = "../bebion-gc" }
bebion-runtime = { path = "../bebion-runtime" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"