[package]
name = "bebion-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
bebion-runtime = { path = "../bebion-runtime" }
bebion-gc = { path = "../bebion-gc" }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wasmtime = "14.0"